Fix 'main-message' alignment by adjusting justify-content

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     width: 40%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
 }
 
@@ -78,7 +79,6 @@ body {
 
 .main-message button {
     padding: 4px 20px;
-    margin-top: 8px;
     background-color: #3882f6;
     color: #f9faf8;
     font-weight: 700;
